erreur corrigée image

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Banger</string>
     <string name="host_party">Héberger une Party</string>
     <string name="join_party">Rejoindre une Party</string>
+    <string name="samere">Image</string>
 </resources>
